<resources>
    <string name="app_name">Travela</string>
    <string name="title_activity_dashboard_main">DashboardMainActivity</string>
    <string name="title_trip">Trip</string>
    <string name="title_memories">Memories</string>
    <string name="title_wallet">Wallet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="if_you_are_new_user">if you are new user !</string>
    <string name="if_you_already_an_user">if you already an user !</string>
</resources>
