<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounmain_shadow"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/main_logo" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/mainLayoutId"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="250dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <EditText

            android:id="@+id/emailLoginEtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_design"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="15dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:shadowColor="#949494"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="5"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/ColorHint"
            android:elevation="8dp"
            />

        <EditText

            android:id="@+id/passwordLoginEtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text_design"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:shadowColor="#949494"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="5"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/ColorHint"
            android:elevation="8dp"/>

        <Button
            android:id="@+id/loginBtnId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/login_button_design"
            android:shadowColor="#949494"
            android:shadowDx="1.2"
            android:shadowDy="1.2"
            android:shadowRadius="5"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"

            />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainLayoutId"
        android:layout_marginTop="110dp"
        android:orientation="horizontal">

        <TextView
            android:onClick="signUpPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/signup_btn_design"
            android:padding="4dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/if_you_are_new_user"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="italic"/>


    </LinearLayout>


</RelativeLayout>